--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,8 @@
 body, html {
     height: 100%;
 }
+.body-course{ height: 40px;}
+.body-course p { float: left;padding: 9px;}
 
 body {
     font-family: yekan-bakh, sans-serif;
